Complete party command management